--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "8.33.0",
     "hast-util-from-html-isomorphic": "^2.0.0",
     "next": "^14.1.0",
+    "gray-matter": "^4.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
