--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "@fullcalendar/react": "^6.1.4",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
+    "@mdxeditor/editor": "^2.9.0",
     "@next/font": "13.1.6",
+    "@uiw/react-markdown-editor": "^6.0.0",
+    "@uiw/react-md-editor": "^4.0.3",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "dayjs": "^1.11.7",
     "eslint": "8.33.0",
+    "gray-matter": "^4.0.3",
     "hast-util-from-html-isomorphic": "^2.0.0",
     "next": "^14.1.0",
-    "gray-matter": "^4.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
