--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-daisyui": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "rehype-autolink-headings": "^7.1.0",
